--- a/layout.html
+++ b/layout.html
@@ -15,12 +15,20 @@
     rel="stylesheet"
   />
   <title>Mapa Dinámico de la FISI</title>
+
+  <!-- Agregando libreria-->
+  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
+    
+  <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
+  <script src="https://cdn.osmbuildings.org/classic/0.2.2b/OSMBuildings-Leaflet.js"></script>
+
 </head>
 <body>
   <!-- Navbar -->
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="#">Mapa Dinámico de la FISI</a>
+    <a class="navbar-brand" href="layout.html">Mapa Dinámico de la FISI</a>
     <button
       class="navbar-toggler"
       type="button"
@@ -36,12 +44,23 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item active">
-          <a class="nav-link" href="#">
-            Home <span class="sr-only">(current)</span>
+          <a class="nav-link" href="1erpiso.html">
+            Primer piso <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="2dopiso.html">
+            Segundo piso <span class="sr-only">(current)</span>
+          </a>
+        </li>
+        <li class="nav-item active">
+          <a class="nav-link" href="3erpiso.html">
+            Tercer piso <span class="sr-only">(current)</span>
           </a>
         </li>
       </ul>
     </div>
   </nav>
+
 </body>
 </html>
