Cambio en el principal
Cambien las imagenes, que solo las puse para probar. Y ayudenme que no se como poner puntitos para cambiar de imagen a imagen.

--- a/layout.html
+++ b/layout.html
@@ -62,5 +62,22 @@
     </div>
   </nav>
 
+  <!-- Slider-->
+
+  <section class="container">
+    <div class="conjunto-sliders">
+      <div class="slider">
+        <img id="slider 1" src="imagen1.jpeg" alt="3D rendering of an imaginary planet in space">
+        <img id="slider 2" src="imagen2.png" alt="3D rendering of an imaginary planet in space">
+        <img id="slider 3" src="imagen3.png" alt="3D rendering of an imaginary planet in space">
+      </div>
+      <div class="slider-nav">
+        <a href="#slider 1"></a>
+        <a href="#slider 2"></a>
+        <a href="#slider 3"></a>
+      </div>
+    </div>
+  </section>
+
 </body>
 </html>
