--- a/html/layout.html
+++ b/html/layout.html
@@ -17,14 +17,33 @@
   <title>Mapa Dinámico de la FISI</title>
 
   <!-- Agregando libreria-->
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="../styles/style.css">
+  <link rel="stylesheet" href="../styles/preload.css">
   <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css" integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY=" crossorigin="" />
     
   <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
   <script src="https://cdn.osmbuildings.org/classic/0.2.2b/OSMBuildings-Leaflet.js"></script>
 
 </head>
-<body>
+<body class="hidden">
+  <!-- PreLoader -->
+  <div class="centered" id="onload">
+    <div class="lds-ellipsis">
+      <div>
+
+      </div>
+      <div>
+
+      </div>
+      <div>
+
+      </div>
+      <div>
+
+      </div>
+    </div>
+  </div>
+
   <!-- Navbar -->
 
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
@@ -67,9 +86,9 @@
   <section class="container">
     <div class="conjunto-sliders">
       <div class="slider">
-        <img id="slider 1" src="imagen1.jpeg" alt="3D rendering of an imaginary planet in space">
-        <img id="slider 2" src="imagen2.png" alt="3D rendering of an imaginary planet in space">
-        <img id="slider 3" src="imagen3.png" alt="3D rendering of an imaginary planet in space">
+        <img id="slider 1" src="../img/imagen1.jpeg" alt="3D rendering of an imaginary planet in space">
+        <img id="slider 2" src="../img/imagen2.png" alt="3D rendering of an imaginary planet in space">
+        <img id="slider 3" src="../img/imagen3.png" alt="3D rendering of an imaginary planet in space">
       </div>
       <div class="slider-nav">
         <a href="#slider 1"></a>
@@ -78,6 +97,8 @@
       </div>
     </div>
   </section>
-
+  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+  <script src="../scripts/jquery.js"></script>
+  
 </body>
 </html>
