--- a/html/layout.html
+++ b/html/layout.html
@@ -93,14 +93,15 @@
           <div class="inner">
              <div class="slide slide_1">
                 <div class="slide-content">
-                   <h2>Slide 1</h2>
-                   <p>Content for Slide 1</p>
+                   <h2>¿TE ENCUENTRAS PERDIDO?</h2>
+                   <p>No te preocupes, nuestro equipo, Wetkats, te ayudará a ubicarte dentro de nuestra</p>
+                    <p>querida facultad, sigue al siguiente slide para saber donde te encuentras</p>
                 </div>
              </div>
              <div class="slide slide_2">
                 <div class="slide-content">
-                   <h2>Slide 2</h2>
-                   <p>Content for Slide 2</p>
+                   <h2>Ubica en que piso te encuentras</h2>
+                   <p>Puede parecer obvio, pero este es el primer paso a seguir</p>
                 </div>
              </div>
              <div class="slide slide_3">
