--- a/html/layout.html
+++ b/html/layout.html
@@ -81,57 +81,13 @@
     </div>
   </nav>
 
-  <!-- Second try with sliders-->
+  <!-- SHOWCASE -->
+  <header class="showcase">
+    <h2>¿ESTÁS PERDIDO?</h2>
+    <p>No te preocupes, nuestro equipo, Wetkats, te ayudará a ubicarte dentro de nuestra facultad en cuestión de segundos</p>
+  </header>
 
-  <div id="slider">
-    <input type="radio" name="slider" id="slide1" checked>
-    <input type="radio" name="slider" id="slide2">
-    <input type="radio" name="slider" id="slide3">
-    <input type="radio" name="slider" id="slide4">
-    <div id="slides">
-       <div id="overflow">
-          <div class="inner">
-             <div class="slide slide_1">
-                <div class="slide-content">
-                   <h2>¿TE ENCUENTRAS PERDIDO?</h2>
-                   <p>No te preocupes, nuestro equipo, Wetkats, te ayudará a ubicarte dentro de nuestra</p>
-                    <p>querida facultad, sigue al siguiente slide para saber donde te encuentras</p>
-                </div>
-             </div>
-             <div class="slide slide_2">
-                <div class="slide-content">
-                   <h2>Ubica en que piso te encuentras</h2>
-                   <p>Puede parecer obvio, pero este es el primer paso a seguir</p>
-                </div>
-             </div>
-             <div class="slide slide_3">
-                <div class="slide-content">
-                   <h2>Slide 3</h2>
-                   <p>Content for Slide 3</p>
-                </div>
-             </div>
-             <div class="slide slide_4">
-                <div class="slide-content">
-                   <h2>Slide 4</h2>
-                   <p>Content for Slide 4</p>
-                </div>
-             </div>
-          </div>
-       </div>
-    </div>
-    <div id="controls">
-       <label for="slide1"></label>
-       <label for="slide2"></label>
-       <label for="slide3"></label>
-       <label for="slide4"></label>
-    </div>
-    <div id="bullets">
-       <label for="slide1"></label>
-       <label for="slide2"></label>
-       <label for="slide3"></label>
-       <label for="slide4"></label>
-    </div>
- </div>
+
   <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
   <script src="../scripts/jquery.js"></script>
   
