--- a/html/layout.html
+++ b/html/layout.html
@@ -44,52 +44,81 @@
     </div>
   </div>
 
-  <!-- Navbar -->
+  <div class="container">
+      <!-- Navbar -->
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="layout.html">Mapa Dinámico de la FISI</a>
-    <button
-      class="navbar-toggler"
-      type="button"
-      data-toggle="collapse"
-      data-target="#navbarSupportedContent"
-      aria-controls="navbarSupportedContent"
-      aria-expanded="false"
-      aria-label="Toggle navigation"
-    >
-      <span class="navbar-toggler-icon"></span>
-    </button>
-  
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item active">
-          <a class="nav-link" href="1erpiso.html">
-            Primer piso <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="2dopiso.html">
-            Segundo piso <span class="sr-only">(current)</span>
-          </a>
-        </li>
-        <li class="nav-item active">
-          <a class="nav-link" href="3erpiso.html">
-            Tercer piso <span class="sr-only">(current)</span>
-          </a>
-        </li>
-      </ul>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+      <a class="navbar-brand" href="layout.html">Mapa Dinámico de la FISI</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-toggle="collapse"
+        data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+    
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav mr-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="1erpiso.html">
+              Primer piso <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="2dopiso.html">
+              Segundo piso <span class="sr-only">(current)</span>
+            </a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="3erpiso.html">
+              Tercer piso <span class="sr-only">(current)</span>
+            </a>
+          </li>
+        </ul>
+      </div>
+    </nav>
+
+    <!-- SHOWCASE -->
+    <header class="showcase">
+      <h2>¿ESTÁS PERDIDO?</h2>
+      <p>No te preocupes, nuestro equipo, Wetkats, te ayudará a ubicarte dentro de nuestra facultad en cuestión de segundos.</p> 
+      <p>Sigue bajando para encontrar más información sobre la infraestructura de nuestra facultad</p>
+    </header>
+
+    <!-- NEWS CARDS -->
+    <div class="news-cards">
+      <div>
+        <img src="img/FISI.jpg" alt="" />
+        <h3>Lorem, ipsum dolor.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+        </p>
+        <a href="1erpiso.html">Visitar el primer piso <i class="fas fa-angle-double-right"></i></a>
+      </div>
+      <div>
+        <img src="img/FISI.jpg" alt="" />
+        <h3>Lorem, ipsum dolor.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+        </p>
+        <a href="2dopiso.html">Visitar el segundo piso <i class="fas fa-angle-double-right"></i></a>
+      </div>
+      <div>
+        <img src="img/FISI.jpg" alt="" />
+        <h3>Lorem, ipsum dolor.</h3>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
+          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+        </p>
+        <a href="3erpiso.html">Visitar el tercer piso <i class="fas fa-angle-double-right"></i></a>
+      </div>
     </div>
-  </nav>
+    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+    <script src="../scripts/jquery.js"></script>
 
-  <!-- SHOWCASE -->
-  <header class="showcase">
-    <h2>¿ESTÁS PERDIDO?</h2>
-    <p>No te preocupes, nuestro equipo, Wetkats, te ayudará a ubicarte dentro de nuestra facultad en cuestión de segundos</p>
-  </header>
-
-
-  <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-  <script src="../scripts/jquery.js"></script>
-  
+  </div>  
 </body>
 </html>
