ultimo commit del dia
con fe

--- a/html/layout.html
+++ b/html/layout.html
@@ -89,11 +89,15 @@
       <p>Sigue bajando para encontrar más información sobre la infraestructura de nuestra facultad</p>
     </header>
 
+    <div class="section1">
+      <h3>Para poder guiarte correctamente, ubica en que piso te encuentras.</h3>
+    </div>
+
     <!-- NEWS CARDS -->
     <div class="news-cards">
       <div>
         <img src="img/FISI.jpg" alt="" />
-        <h3>Lorem, ipsum dolor.</h3>
+        <h3>Primer piso.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
         </p>
@@ -101,7 +105,7 @@
       </div>
       <div>
         <img src="img/FISI.jpg" alt="" />
-        <h3>Lorem, ipsum dolor.</h3>
+        <h3>Segundo piso.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
         </p>
@@ -109,7 +113,7 @@
       </div>
       <div>
         <img src="img/FISI.jpg" alt="" />
-        <h3>Lorem, ipsum dolor.</h3>
+        <h3>Tercer piso.</h3>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
           doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
         </p>
