--- a/html/layout.html
+++ b/html/layout.html
@@ -5,16 +5,15 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <!-- Fontawesome -->
-  <link
-    href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css"
-    rel="stylesheet"
-  />
+   <!-- Font Awesome -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css">
+
   <!-- Bootswatch Darkly Theme -->
   <link
     href="https://stackpath.bootstrapcdn.com/bootswatch/4.5.2/darkly/bootstrap.min.css"
     rel="stylesheet"
   />
-  <title>Mapa Dinámico de la FISI</title>
+  <title>WebMap</title>
 
   <!-- Agregando libreria-->
   <link rel="stylesheet" href="../styles/style.css">
@@ -90,32 +89,33 @@
     </header>
 
     <div class="section1">
-      <h3>Para poder guiarte correctamente, ubica en que piso te encuentras.</h3>
+      <h3>Primer paso:</h3>
+      <h5>Ubica en que piso te encuentras, puede parecer obvio pero para saber con claridad donde te encuentras, este es el primer paso</h5>
     </div>
 
     <!-- NEWS CARDS -->
     <div class="news-cards">
       <div>
-        <img src="img/FISI.jpg" alt="" />
+        <img src="../img/FISI.jpg" alt="" />
         <h3>Primer piso.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+        <p>En el primer piso podrás encontrar, la oficina del CERSEU, la oficina de USGOM, la losa deportiva, el módulo de atención al docente, entre más.
+          Explora el primer piso de nuestra facultad, dando click aquí abajo.
         </p>
         <a href="1erpiso.html">Visitar el primer piso <i class="fas fa-angle-double-right"></i></a>
       </div>
       <div>
-        <img src="img/FISI.jpg" alt="" />
+        <img src="../img/FISI.jpg" alt="" />
         <h3>Segundo piso.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+        <p>En el segundo piso, encontrarás lugares como, el micro data center, la sala de catedráticos, labortatorios, el Decanato, el comedor, etc. Averigua más
+          sobre el segundo piso de la FISI, dando click aquí abajo.
         </p>
         <a href="2dopiso.html">Visitar el segundo piso <i class="fas fa-angle-double-right"></i></a>
       </div>
       <div>
-        <img src="img/FISI.jpg" alt="" />
+        <img src="../img/FISI.jpg" alt="" />
         <h3>Tercer piso.</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Veniam dolore fugit esse corporis nesciunt minima
-          doloremque modi mollitia rerum, similique optio eligendi itaque amet qui ullam vel incidunt asperiores fuga?
+        <p>En el tercer piso de la FISI, podrás encontrar, la unidad de mátricula, las direcciones tanto de la escuela de software como de sistemas, la oficina de la UNAYOE y Bienestar,
+          etc. Descubre más sobre este piso dando click aquí abajo.
         </p>
         <a href="3erpiso.html">Visitar el tercer piso <i class="fas fa-angle-double-right"></i></a>
       </div>
