ultimo cambio creo
a

--- a/html/3erpiso.html
+++ b/html/3erpiso.html
@@ -22,11 +22,9 @@
     <script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js" integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo=" crossorigin=""></script>
     <script src="https://cdn.osmbuildings.org/classic/0.2.2b/OSMBuildings-Leaflet.js"></script>
 
-    
-
-    <title>intento de mapa</title>
+    <title>WebMap</title>
 </head>
-<body style="background-color: #b1b1b1;">
+<body >
 
   <div class="container">
         <!-- Navbar -->
