--- a/html/layout.html
+++ b/html/layout.html
@@ -52,7 +52,7 @@
       <!-- Navbar -->
 
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-      <a class="navbar-brand" href="layout.html">Mapa Dinámico de la FISI</a>
+      <a class="navbar-brand" href="layout.html">WebMap - FISI</a>
       <button
         class="navbar-toggler"
         type="button"
@@ -82,6 +82,9 @@
               Tercer piso <span class="sr-only">(current)</span>
             </a>
           </li>
+          <li>
+            <img src="../img/FISI_logo.png" style="float: right ; margin-left: 325px; height: 40px;">
+          </li>
         </ul>
       </div>
     </nav>
@@ -90,18 +93,20 @@
     <header class="showcase">
       <h2>¿ESTÁS PERDIDO?</h2>
       <p>No te preocupes, nuestro equipo, Wetkats, te ayudará a ubicarte dentro de nuestra facultad en cuestión de segundos.</p> 
-      <p>Sigue bajando para encontrar más información sobre la infraestructura de nuestra facultad</p>
+      <p>Sigue bajando para encontrar más información sobre la infraestructura de nuestra facultad.</p>
     </header>
 
     <div class="section1">
-      <h3>Primer paso:</h3>
-      <h5>Ubica en que piso te encuentras, puede parecer obvio pero para saber con claridad donde te encuentras, este es el primer paso</h5>
+      <h3>Parece un poco obvio pero, ¡ubica en que piso te encuentras!</h3>
+      <h5>Más información de cada piso aquí abajo.</h5>
+
+      
     </div>
 
     <!-- NEWS CARDS -->
     <div class="news-cards">
       <div>
-        <img src="../img/FISI.jpg" alt="" />
+        <img src="../img/primerpiso.jpg" alt="" />
         <h3>Primer piso.</h3>
         <p>En el primer piso podrás encontrar, la oficina del CERSEU, la oficina de USGOM, la losa deportiva, el módulo de atención al docente, entre más.
           Explora el primer piso de nuestra facultad, dando click aquí abajo.
@@ -109,7 +114,7 @@
         <a href="1erpiso.html">Visitar el primer piso <i class="fas fa-angle-double-right"></i></a>
       </div>
       <div>
-        <img src="../img/FISI.jpg" alt="" />
+        <img src="../img/fisiperdido.jpg" alt="" />
         <h3>Segundo piso.</h3>
         <p>En el segundo piso, encontrarás lugares como, el micro data center, la sala de catedráticos, labortatorios, el Decanato, el comedor, etc. Averigua más
           sobre el segundo piso de la FISI, dando click aquí abajo.
