--- a/html/2dopiso.html
+++ b/html/2dopiso.html
@@ -24,7 +24,7 @@
     
     <title>WebMap</title>
 </head>
-<body style="background-color: #b1b1b1;">
+<body >
 
   <div class="container">
         <!-- Navbar -->
