--- a/html/layout.html
+++ b/html/layout.html
@@ -51,7 +51,7 @@
   <div class="container">
       <!-- Navbar -->
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark main-header">
       <a class="navbar-brand" href="layout.html">WebMap - FISI</a>
       <button
         class="navbar-toggler"
